deployment/k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-app
    namespace: ecommerce-vti
    labels:
        app: backend-app
spec:
    replicas: 2
    selector:
        matchLabels:
            app: backend-app
    template:
        metadata:
            labels:
                app: backend-app
        spec:
            serviceAccountName: external-secrets-sa
            containers:
                - name: backend
                  image: "BACKEND_IMAGE"
                  ports:
                      - containerPort: 9000
                  resources:
                      requests:
                          memory: "256Mi"
                          cpu: "250m"
                      limits:
                          memory: "512Mi"
                          cpu: "500m"
                  livenessProbe:
                      tcpSocket:
                          port: 9000
                      initialDelaySeconds: 30
                      periodSeconds: 10
                  readinessProbe:
                      tcpSocket:
                          port: 9000
                      initialDelaySeconds: 5
                      periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
    name: backend-service
    namespace: ecommerce-vti
spec:
    selector:
        app: backend-app
    ports:
        - protocol: TCP
          port: 9000
          targetPort: 9000
    type: ClusterIP
