deployment/k8s/base/loadbalancer-services.yaml
apiVersion: v1
kind: Service
metadata:
    name: backend-loadbalancer
    namespace: ecommerce-vti
    annotations:
        service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
        service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
    type: LoadBalancer
    ports:
        - port: 80
          targetPort: 9000
          protocol: TCP
          name: http
    selector:
        app: backend-app
---
apiVersion: v1
kind: Service
metadata:
    name: frontend-loadbalancer
    namespace: ecommerce-vti
    annotations:
        service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
        service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
    type: LoadBalancer
    ports:
        - port: 80
          targetPort: 3000
          protocol: TCP
          name: http
    selector:
        app: frontend-app
